--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Courier New', Courier, monospace;
+    font-family: 'Bruno Ace SC', cursive;
 }
 
 body{
@@ -11,14 +11,14 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
-    background: linear-gradient(45deg,#0a0a0a, #3a4452 );
+    background: linear-gradient(45deg,#654E92, #2A2F4F);
 }
 .calculator{
     border: 1px solid #757344;
     padding:  20px;
     border-radius: 16%;
     background: transparent;
-    box-shadow: 0px 3px 15px rgb(113,115,119,0.5);
+    box-shadow: 0px 3px 15px rgb(201, 167, 235 ,0.2);
 
 }
 
@@ -28,7 +28,7 @@ input{
     padding: 24px;
     margin: 10px;
     background: transparent;
-    box-shadow: 0px 3px 15px rgb(84,84,84,0.01);
+    box-shadow: 0px 3px 15px rgb(84,84,84,0.09);
     font-size: 40px;
     text-align: right;
     cursor: pointer;
